--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body.light {
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
   display: flex;
@@ -37,6 +36,18 @@ body {
 
 .hidden {
   display: none;
+}
+
+.segoeUIfont {
+  font-family: "Segoe UI", sans-serif;
+}
+
+.cursivefont {
+  font-family: "cursiveGoogleFont";
+}
+
+.comicsansfont {
+  font-family: "Comic Sans MS", sans-serif;
 }
 
 input[type="text"],
@@ -57,6 +68,30 @@ input[type="text"]::placeholder,
 input[type="password"]::placeholder,
 input[type="number"]::placeholder {
   color: var(--placeholder-color);
+}
+
+select {
+  padding: 10px 15px;
+  font-size: 12px;
+  border-radius: 5px;
+  border: none;
+  width: 200px;
+  max-width: 80vw;
+  background-color: var(--input-bg);
+  color: var(--input-text);
+  outline: none;
+}
+
+#fontOption1 {
+  font-family: "Segoe UI", sans-serif;
+}
+
+#fontOption2 {
+  font-family: "cursiveGoogleFont";
+}
+
+#fontOption3 {
+  font-family: "Comic Sans MS", sans-serif;
 }
 
 button {
@@ -96,6 +131,13 @@ iframe {
   gap: 10px;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+@font-face {
+  font-family: "cursiveGoogleFont";
+  src: url("fonts/static/EduNSWACTCursive-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
 }
 
 
