--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,14 @@ body {
   display: none;
 }
 
+.unclickable {
+  pointer-events: none;
+}
+
+.clickable {
+  pointer-events: all;
+}
+
 .segoeUIfont {
   font-family: "Segoe UI", sans-serif;
 }
@@ -152,11 +160,23 @@ img {
   height: 35vh;
 }
 
+@media (orientation: portrait) {
+  img {
+  padding: 1.5625vw;
+  height: 15vh;
+  }
+}
+
 h2 {
   background-color: var(--input-bg);
 }
 
-#addToQuickFindButton {
+#sendFeedbackButton {
+  padding: 6px 12px;
+  font-size: 12px;
+}
+
+#permaAcknowledgeButton {
   padding: 6px 12px;
   font-size: 12px;
 }
