--- a/styles.css
+++ b/styles.css
@@ -228,4 +228,8 @@ footer:hover {
   color:#4e8cff;
 }
 
-/* z-index: -1; */
+#redirectButton {
+  padding: 6px 12px;
+  font-size: 14px;
+  background-color: #00ad2b;
+}
