--- a/styles.css
+++ b/styles.css
@@ -55,12 +55,14 @@ body {
   display: none;
 }
 
-.unclickable {
-  pointer-events: none;
-}
-
 .clickable {
   pointer-events: all;
+  opacity: 100%;
+}
+
+.unclickable {
+  pointer-events: none;
+  opacity: 50%;
 }
 
 .segoeUIfont {
@@ -201,6 +203,11 @@ h2 {
   font-size: 12px;
 }
 
+#clearLocalStorageButton {
+  padding: 6px 12px;
+  font-size: 12px;
+}
+
 textarea {
   width: 50vw;
   max-width: 960px;
@@ -232,4 +239,12 @@ footer:hover {
   padding: 6px 12px;
   font-size: 14px;
   background-color: #00ad2b;
+}
+
+#divchildmovietextparent{
+  user-select: none;
+}
+
+#divchildshowtextparent{
+  user-select: none;
 }
